--- a/agir-collectivement.html
+++ b/agir-collectivement.html
@@ -92,13 +92,13 @@
                             Prise en charge psychologique, médicale et juridique des femmes et enfants ayant vécu la violence. (<a href="azur-d.html">AZUR DEV</a> / <a href="cjid.html">CJID</a>). Brazzaville
                         </p>
                         <p class="text-success">
-                            La situation de la femme veuve confrontée au problème de succession à Brazzaville. (<a href="cudhoc.html">CUDHOC</a> / <a href="adf.html">ADF</a> / <a href="cndhp.html">CNDHP</a> ). Brazzaville.
+                            La situation de la femme veuve confrontée au problème de succession à Brazzaville. (<a href="cudhoc.html">CUDHOC</a> / <a href="adf.html">ADF</a> / <a href="#">CNDHP</a> ). Brazzaville.
                         </p>
                         <p class="text-success">
                             Projet d’Aménagement de la piste Agricole EBOKA-Aboua-ONGARA et Mvoula. (<a href="ajamo.html">AJAMO</a> / <a href="aceem.html">ACEEM</a> ). Cuvette.
                         </p>
                         <p class="text-success">
-                            Accompagnement à la structuration opérationnelle et organisationnelle des fournisseurs de formation de la commune de Dolisie. (<a href="aadjfm.html">AADJFM</a> / <a href="credo.html">CREDO</a> / <a href="ddfqe.html">DDFQE</a> ). Niari.
+                            Accompagnement à la structuration opérationnelle et organisationnelle des fournisseurs de formation de la commune de Dolisie. (<a href="aadjfm.html">AADJFM</a> / <a href="credo.html">CREDO</a> / DDFQE ). Niari.
                         </p>
                         <p class="text-success">
                             Renforcement des capacités et autonomisation des veuves vulnérables. (<a href="alpn.html">ALPN</a> / <a href="credo.html">CREDO</a> / CAS de Dolisie 2).Niari.
