--- a/nos-projets.html
+++ b/nos-projets.html
@@ -88,7 +88,7 @@
                             Dans sa phase actuelle (2018-2021) , 11 microprojets ont été soutenus dans le cadre du <a href="projet-groupes-vulnerables.html">Fonds d’appui « défense des droits des groupes vulnérables »</a> en 2019.
                         </p>
                         <p>
-                            Dans son dernier Fonds d’appui aux projets lancé en 2020 , le Programme a retenu 19 projets dont 13 concernant l’appui aux groupes vulnérables et 6 sur le renforcement des capacités.
+                            Dans son dernier Fonds d’appui aux projets lancé en 2020 , <a href="documents/20201021-fap-2020-2021-liste-des-19-projets-valides-par-le-copil-1.pdf">le Programme a retenu 19 projets</a> dont 13 concernant l’appui aux groupes vulnérables et 6 sur le renforcement des capacités.
                         </p>
                         <button class="btn btn-sm btn-secondary">J'aime</button>
                     </div>
